--- a/ui/assets/css/style.scss
+++ b/ui/assets/css/style.scss
@@ -1,1 +1,6 @@
-@import 'base'
+@import 'base';
+@import 'globaal';
+@import 'pages/car/create';
+@import 'pages/car/list';
+@import 'pages/car/update';
+@import 'pages/car/view';
