--- a/ui/templates/pages/error/500.html
+++ b/ui/templates/pages/error/500.html
@@ -42,7 +42,7 @@
         .error-code {
             font-size: 6rem;
             font-weight: 700;
-            color: var(--color-gray-300);
+            color: rgb(97, 0, 78);
             line-height: 1;
             margin-bottom: 2rem;
         }
